creando un mixin para imagenes de fondo

--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -1,5 +1,6 @@
 @use '../custom' as *;
+@use '../base/mixins' as m;
 
 .header {
-    background-color: $negro;
+    @include m.background-image('../img/header.jpg');
 }
