--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -4,3 +4,9 @@
 .header {
     @include m.background-image('../img/header.jpg');
 }
+
+.navegacion a {
+    &:hover {
+        background-color: $primary;
+    }
+}
