--- a/src/scss/ui/_header.scss
+++ b/src/scss/ui/_header.scss
@@ -3,10 +3,26 @@
 
 .header {
     @include m.background-image('../img/header.jpg');
+    position: relative;
+
+    .header-guitarra {
+        display: none;
+
+        @include media-breakpoint-up(lg) {
+            display: block;
+            position: absolute;
+            right: 0;
+            bottom: 0;
+        }
+    }
 }
 
-.navegacion a {
-    &:hover {
-        background-color: $primary;
+.navegacion {
+    position: relative;
+    z-index: 1;
+    a {
+        &:hover {
+            background-color: $primary;
+        }
     }
 }
