--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -37,5 +37,10 @@ $link-color: $white;
 $link-hover-color: $white;
 $link-decoration: none;
 
+// Cards
+
+$card-border-radius: 0;
+$card-border-width: 0;
+
 // Importar Bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
