creando tienda y producto, y finalizando el proyecto por el momento

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -42,5 +42,11 @@ $link-decoration: none;
 $card-border-radius: 0;
 $card-border-width: 0;
 
+
+// Inputs
+
+$input-border-radius: 1rem;
+$input-border-color: $dark;
+
 // Importar Bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
